build on any push

--- a/{{cookiecutter.application_id}}-{{cookiecutter.service_id}}/_platform/hooks/build-on-push.yaml
+++ b/{{cookiecutter.application_id}}-{{cookiecutter.service_id}}/_platform/hooks/build-on-push.yaml
@@ -1,5 +1,6 @@
 trigger:
-  commit-match: 'dev.svctk.{{cookiecutter.application_id}}.{{cookiecutter.service_id}}.master_'
+  # Builds on any push, any branch or tag
+  commit-match: 'dev.svctk.{{cookiecutter.application_id}}.{{cookiecutter.service_id}}'
   event-type: repo-push
 steps:
   - name: 'gcr.io/cloud-builders/docker'
