revert back to build on master push only

--- a/{{cookiecutter.application_id}}-{{cookiecutter.service_id}}/_platform/hooks/build-on-master-push.yaml
+++ b/{{cookiecutter.application_id}}-{{cookiecutter.service_id}}/_platform/hooks/build-on-master-push.yaml
@@ -1,6 +1,6 @@
 trigger:
-  # Builds on any push, any branch or tag
-  commit-match: 'dev.svctk.{{cookiecutter.application_id}}.{{cookiecutter.service_id}}'
+  # Builds on any push to master
+  commit-match: 'dev.svctk.{{cookiecutter.application_id}}.{{cookiecutter.service_id}}.master_'
   event-type: repo-push
 steps:
   - name: 'gcr.io/cloud-builders/docker'
