--- a/{{cookiecutter.application_id}}-{{cookiecutter.service_id}}/Dockerfile
+++ b/{{cookiecutter.application_id}}-{{cookiecutter.service_id}}/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.12.5-alpine3.9 as builder
+FROM gcr.io/svctk-images/demo-go
 RUN apk update && apk add git && apk add alpine-sdk && apk add ca-certificates && rm -rf /var/cache/apk/*
 COPY go.* /modbuild/
 WORKDIR /modbuild
